# Geo-processor_Fastapi_NextJS

./: .gitignore  README.md  docker-compose.yml
api-nestjs/: .env  Dockerfile  README.md  package-lock.json  package.json
api-nestjs/src/: app.module.ts  main.ts
api-nestjs/src/geo/: geo.controller.ts  geo.module.ts  geo.service.ts
api-nestjs/src/geo/dto/: bounds.dto.ts  centroid.dto.ts  point.dto.ts  process-request.dto.ts  process-response.dto.ts
api-nestjs/test/: geo.e2e-spec.ts
backend-python/: Dockerfile  pyproject.toml  requirements.txt
backend-python/app/: __init__.py  main.py  schemas.py  services.py
backend-python/app/routers/: process.py
backend-python/tests/: __init__.py  test_api.py
frontend-nextjs/: .env  .gitignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts
frontend-nextjs/playwright-report/: index.html
frontend-nextjs/src/app/: layout.tsx  page.tsx
frontend-nextjs/src/components/: ErrorAlert.tsx  MapDisplay.tsx  PointInputRow.tsx  PointsForm.tsx  ResultsDisplay.tsx
frontend-nextjs/src/services/: geoService.ts
frontend-nextjs/src/types/: geo.ts
frontend-nextjs/tests/e2e/: geo-process.spec.ts
